--- a/index.html
+++ b/index.html
@@ -1,184 +1,268 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <title>Malla Curricular Contador UNS</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Malla Curricular - Contador Público UNS</title>
   <style>
     body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: #fdf6f0;
-      color: #333;
-      padding: 20px;
+      font-family: sans-serif;
+      margin: 0;
+      background: #f8f9fa;
+      padding: 1rem;
     }
     h1 {
       text-align: center;
-      color: #6b4c3b;
+      color: #3d3d3d;
     }
-    .grid {
-      display: grid;
-      grid-template-columns: repeat(5, 1fr);
-      gap: 10px;
+    .year {
+      background: #e3f2fd;
+      margin: 1rem 0;
+      border-radius: 0.5rem;
+      padding: 1rem;
     }
-    .anio {
-      background: #f3e5f5;
-      padding: 10px;
-      border-radius: 8px;
-    }
-    .cuatri {
-      margin-bottom: 15px;
+    .cuatrimestre {
+      margin: 1rem 0;
     }
     .materia {
-      padding: 6px;
-      margin: 4px 0;
-      background: #e1f5fe;
-      border-radius: 5px;
+      background: white;
+      padding: 0.5rem;
+      margin: 0.3rem 0;
+      border-radius: 0.3rem;
+      border-left: 5px solid #2196f3;
       cursor: pointer;
-      position: relative;
     }
     .materia.aprobada {
-      background: #c8e6c9;
       text-decoration: line-through;
+      background: #c8e6c9;
     }
-    .materia.bloqueada {
-      background: #ffe0b2;
-      color: #999;
-      cursor: not-allowed;
+    .materia.locked {
+      opacity: 0.5;
+      pointer-events: none;
     }
     .tooltip {
-      visibility: hidden;
-      background-color: #333;
-      color: #fff;
-      text-align: center;
-      border-radius: 6px;
-      padding: 5px;
-      position: absolute;
-      z-index: 1;
-      bottom: 125%;
-      left: 50%;
-      transform: translateX(-50%);
-      opacity: 0;
-      transition: opacity 0.3s;
-      width: max-content;
-    }
-    .materia:hover .tooltip {
-      visibility: visible;
-      opacity: 1;
+      font-size: 0.8rem;
+      color: #666;
     }
   </style>
 </head>
 <body>
-<h1>Malla Curricular Contador Público - UNS</h1>
-<div class="grid" id="malla"></div>
-<script>
-  const materias = [
-    // 1er Año
-    { id: '8116', nombre: 'MATEMATICA I C', anio: 1, cuatri: 1 },
-    { id: '1660', nombre: 'INTRODUCCION A LA ADMINISTRACION', anio: 1, cuatri: 1 },
-    { id: '4757', nombre: 'INTRODUCCION AL ESTUDIO DE LAS CIENCIAS SOCIALES', anio: 1, cuatri: 1 },
-    { id: '1613', nombre: 'CONTABILIDAD BASICA', anio: 1, cuatri: 2 },
-    { id: '9065', nombre: 'INTRODUCCION AL DERECHO C.A.', anio: 1, cuatri: 2 },
-    { id: '8117', nombre: 'MATEMATICA II C', anio: 1, cuatri: 2, req: { cursar: ['8116'], rendir: ['8116'] } },
+  <h1>Malla Curricular - Contador Público (UNS)</h1>
+  <div id="malla"></div>
 
-    // 2do Año
-    { id: '1673', nombre: 'ANALISIS FINANCIERO', anio: 2, cuatri: 1, req: { cursar: ['8116', '8117'], rendir: ['8116', '8117'] } },
-    { id: '9074', nombre: 'DERECHO EMPRESARIO C', anio: 2, cuatri: 1, req: { cursar: ['9065'], rendir: ['9065'] } },
-    { id: '1711', nombre: 'LAB. DE TECNOLOGIA EN ORGANIZACIONES', anio: 2, cuatri: 1, req: { cursar: ['1660'], rendir: ['1660'] } },
-    { id: '2360', nombre: 'SISTEMAS ECONOMICOS', anio: 2, cuatri: 1, req: { cursar: ['8116'], rendir: ['8116'] } },
-    { id: '1576', nombre: 'CONTABILIDAD I C.P.', anio: 2, cuatri: 2, req: { cursar: ['1613'], rendir: ['1613'] } },
-    { id: '8105', nombre: 'ESTADISTICA CA', anio: 2, cuatri: 2, req: { cursar: ['8116', '8117'], rendir: ['8116', '8117'] } },
-    { id: '2253', nombre: 'MICROECONOMIA', anio: 2, cuatri: 2, req: { cursar: ['8117', '2360'], rendir: ['8117', '2360', '4757'] } },
-
-    // 3er Año
-    { id: '1577', nombre: 'CONTABILIDAD II C.P.', anio: 3, cuatri: 1, req: { cursar: ['1576'], rendir: ['1576'] } },
-    { id: '2103', nombre: 'MACROECONOMIA', anio: 3, cuatri: 1, req: { cursar: ['2253'], rendir: ['2253'] } },
-    { id: '2400', nombre: 'DERECHO LABORAL Y SEGURIDAD SOCIAL', anio: 3, cuatri: 1, req: { cursar: ['9074'], rendir: ['9074'] } },
-    { id: '8015', nombre: 'INFORMATICA APLICADA A LA GESTION C.P.', anio: 3, cuatri: 2 },
-    { id: '1735', nombre: 'COSTOS', anio: 3, cuatri: 2, req: { cursar: ['1576'], rendir: ['1576'] } },
-    { id: '1729', nombre: 'FINANZAS CORPORATIVAS', anio: 3, cuatri: 2, req: { cursar: ['1673'], rendir: ['1673'] } },
-
-    // 4to Año
-    { id: '1578', nombre: 'CONTABILIDAD III C.P.', anio: 4, cuatri: 1, req: { cursar: ['1577'], rendir: ['1577'] } },
-    { id: '9033', nombre: 'DERECHO TRIBUTARIO', anio: 4, cuatri: 1, req: { cursar: ['9074'], rendir: ['9074'] } },
-    { id: '1684', nombre: 'AUDITORIA I', anio: 4, cuatri: 1, req: { cursar: ['1577'], rendir: ['1577'] } },
-    { id: '9025', nombre: 'REGIMEN TRIBUTARIO I', anio: 4, cuatri: 2, req: { cursar: ['9033'], rendir: ['9033'] } },
-    { id: '9091', nombre: 'ETICA Y DEONTOLOGIA PROFESIONAL', anio: 4, cuatri: 2 },
-    { id: '1605', nombre: 'TEORIA DE LAS ORGANIZACIONES', anio: 4, cuatri: 2, req: { cursar: ['1660'], rendir: ['1660'] } },
-
-    // 5to Año
-    { id: '1691', nombre: 'AUDITORIA II', anio: 5, cuatri: 1, req: { cursar: ['1684'], rendir: ['1684'] } },
-    { id: '9034', nombre: 'REGIMEN TRIBUTARIO II', anio: 5, cuatri: 1, req: { cursar: ['9025'], rendir: ['9025'] } },
-    { id: '1736', nombre: 'SEMINARIO DE ACTUALIZACION CONTABLE', anio: 5, cuatri: 1, req: { cursar: ['1578'], rendir: ['1578'] } },
-    { id: '9999', nombre: 'TRABAJO FINAL INTEGRADOR', anio: 5, cuatri: 2, req: { cursar: ['1578', '1691', '9034'], rendir: ['1578', '1691', '9034'] } }
-  ];
-
-  const aprobadas = JSON.parse(localStorage.getItem('aprobadas') || '[]');
-
-  const grid = document.getElementById('malla');
-
-  function renderMalla() {
-    grid.innerHTML = '';
-    for (let a = 1; a <= 5; a++) {
-      const col = document.createElement('div');
-      col.className = 'anio';
-      col.innerHTML = `<h3>${a}° Año</h3>`;
-
-      for (let c = 1; c <= 2; c++) {
-        const cuatri = document.createElement('div');
-        cuatri.className = 'cuatri';
-        cuatri.innerHTML = `<h4>${c === 1 ? '1er' : '2do'} Cuatrimestre</h4>`;
-
-        materias.filter(m => m.anio === a && m.cuatri === c).forEach(m => {
-          const div = document.createElement('div');
-          div.className = 'materia';
-          div.textContent = m.nombre;
-          div.dataset.id = m.id;
-
-          const tooltip = document.createElement('span');
-          tooltip.className = 'tooltip';
-          div.appendChild(tooltip);
-
-          const requisitos = m.req || {};
-          const faltan = [];
-          ['cursar', 'rendir'].forEach(tipo => {
-            if (requisitos[tipo]) {
-              requisitos[tipo].forEach(id => {
-                if (!aprobadas.includes(id)) {
-                  faltan.push(`${tipo} ${id}`);
-                }
-              });
-            }
-          });
-
-          if (aprobadas.includes(m.id)) {
-            div.classList.add('aprobada');
-          } else if (faltan.length > 0) {
-            div.classList.add('bloqueada');
-            tooltip.textContent = 'Requiere: ' + faltan.join(', ');
-          }
-
-          div.addEventListener('click', () => {
-            if (div.classList.contains('bloqueada')) return;
-            const idx = aprobadas.indexOf(m.id);
-            if (idx > -1) {
-              aprobadas.splice(idx, 1);
-            } else {
-              aprobadas.push(m.id);
-            }
-            localStorage.setItem('aprobadas', JSON.stringify(aprobadas));
-            renderMalla();
-          });
-
-          cuatri.appendChild(div);
-        });
-
-        col.appendChild(cuatri);
+  <script>
+    const materias = [
+      // AÑOS ANTERIORES (pueden estar definidos arriba)
+      // Agregamos Tercer Año en adelante (según pedido del usuario)
+      {
+        anio: 3,
+        cuatrimestre: 1,
+        nombre: "ANALISIS DE SISTEMAS ADMINISTRATIVOS",
+        codigo: "1558",
+        cursada: ["1711"],
+        rendir: ["1711"]
+      },
+      {
+        anio: 3,
+        cuatrimestre: 1,
+        nombre: "CONTABILIDAD II C",
+        codigo: "1643",
+        cursada: ["1576"],
+        rendir: ["1576", "1613"]
+      },
+      {
+        anio: 3,
+        cuatrimestre: 1,
+        nombre: "CONTABILIDAD SOCIAL Y AMBIENTAL",
+        codigo: "1645",
+        cursada: ["1576"],
+        rendir: ["1576", "1613", "1660"]
+      },
+      {
+        anio: 3,
+        cuatrimestre: 1,
+        nombre: "FUNDAMENTOS DEL DERECHO PUBLICO",
+        codigo: "9073",
+        cursada: ["9065"],
+        rendir: ["9065"]
+      },
+      {
+        anio: 3,
+        cuatrimestre: 2,
+        nombre: "ACTUACION PROFESIONAL, LABORAL y PREVISIONAL",
+        codigo: "1670",
+        cursada: ["9074"],
+        rendir: ["9074"]
+      },
+      {
+        anio: 3,
+        cuatrimestre: 2,
+        nombre: "CONTABILIDAD III C",
+        codigo: "1644",
+        cursada: ["1643"],
+        rendir: ["1643", "1576"]
+      },
+      {
+        anio: 3,
+        cuatrimestre: 2,
+        nombre: "FINANZAS PUBLICAS C.P.",
+        codigo: "2128",
+        cursada: ["2253"],
+        rendir: ["2253"]
+      },
+      {
+        anio: 4,
+        cuatrimestre: 1,
+        nombre: "ACTUACION PROFESIONAL SOCIETARIA",
+        codigo: "1568",
+        cursada: ["9074"],
+        rendir: ["9074"]
+      },
+      {
+        anio: 4,
+        cuatrimestre: 1,
+        nombre: "ADMINISTRACION GENERAL C",
+        codigo: "1657",
+        cursada: ["1558", "1660"],
+        rendir: ["1558", "1660"]
+      },
+      {
+        anio: 4,
+        cuatrimestre: 1,
+        nombre: "CONTABILIDAD DE COSTOS",
+        codigo: "1530",
+        cursada: ["1643", "1673"],
+        rendir: ["1643", "1673", "1660"]
+      },
+      {
+        anio: 4,
+        cuatrimestre: 1,
+        nombre: "COOPERATIVAS, MUTUALES Y OTROS ENTES DE LA ECONOMIA SOCIAL",
+        codigo: "1527",
+        cursada: ["1576", "1643"],
+        rendir: ["1576", "1643", "1645", "9074"]
+      },
+      {
+        anio: 4,
+        cuatrimestre: 2,
+        nombre: "ADMINISTRACION FINANCIERA I",
+        codigo: "1511",
+        cursada: ["1643", "1644", "1673", "2128"],
+        rendir: ["1643", "1644", "1673", "2128", "8105"]
+      },
+      {
+        anio: 4,
+        cuatrimestre: 2,
+        nombre: "CONTABILIDAD PUBLICA",
+        codigo: "1532",
+        cursada: ["1643", "2128"],
+        rendir: ["1643", "2128", "9073"]
+      },
+      {
+        anio: 4,
+        cuatrimestre: 2,
+        nombre: "TEORIA Y TECNICA TRIBUTARIA I",
+        codigo: "1911",
+        cursada: ["1643", "1644"],
+        rendir: ["1643", "1644", "2128", "9073", "9074"]
+      },
+      {
+        anio: 5,
+        cuatrimestre: 0,
+        nombre: "AUDITORIA A",
+        codigo: "1666",
+        cursada: ["1568", "1657", "1911"],
+        rendir: ["1568", "1657", "1911", "1644", "1670"]
+      },
+      {
+        anio: 5,
+        cuatrimestre: 1,
+        nombre: "ACTUACION PROFESIONAL JUDICIAL",
+        codigo: "1502",
+        cursada: ["1568", "1670", "1911"],
+        rendir: ["1568", "1670", "1911"]
+      },
+      {
+        anio: 5,
+        cuatrimestre: 1,
+        nombre: "TEORIA Y TECNICA TRIBUTARIA II",
+        codigo: "1912",
+        cursada: ["1911"],
+        rendir: ["1911"]
+      },
+      {
+        anio: 5,
+        cuatrimestre: 2,
+        nombre: "PRACTICA PROFESIONAL INTEGRADORA",
+        codigo: "1812",
+        cursada: ["1568", "1912"],
+        rendir: ["1568", "1912"]
+      },
+      {
+        anio: 5,
+        cuatrimestre: 2,
+        nombre: "PRACTICA PROFESIONAL SUPERVISADA",
+        codigo: "1813",
+        rendir: ["4928"]
+      },
+      {
+        anio: 5,
+        cuatrimestre: 2,
+        nombre: "PRUEBA DE SUFICIENCIA EN IDIOMA EXTRANJERO: INGLES",
+        codigo: "4928"
       }
+    ];
 
-      grid.appendChild(col);
+    const aprobadas = JSON.parse(localStorage.getItem("aprobadas") || "[]");
+
+    function puedeCursar(m) {
+      return !m.cursada || m.cursada.every(c => aprobadas.includes(c));
     }
-  }
 
-  renderMalla();
-</script>
+    function puedeRendir(m) {
+      return !m.rendir || m.rendir.every(r => aprobadas.includes(r));
+    }
+
+    function render() {
+      const container = document.getElementById("malla");
+      container.innerHTML = "";
+      const agrupadas = {};
+      materias.forEach(m => {
+        const key = `${m.anio}-${m.cuatrimestre}`;
+        if (!agrupadas[key]) agrupadas[key] = [];
+        agrupadas[key].push(m);
+      });
+
+      Object.entries(agrupadas).forEach(([key, lista]) => {
+        const [anio, cuatri] = key.split("-");
+        const anioEl = document.createElement("div");
+        anioEl.className = "year";
+        anioEl.innerHTML = `<h2>Año ${anio} - ${cuatri == 1 ? '1º Cuatrimestre' : cuatri == 2 ? '2º Cuatrimestre' : 'Anual'}</h2>`;
+        lista.forEach(m => {
+          const div = document.createElement("div");
+          div.className = "materia";
+          div.textContent = `${m.nombre} (${m.codigo})`;
+          if (!puedeCursar(m) || !puedeRendir(m)) div.classList.add("locked");
+          if (aprobadas.includes(m.codigo)) div.classList.add("aprobada");
+          div.onclick = () => {
+            const idx = aprobadas.indexOf(m.codigo);
+            if (idx >= 0) aprobadas.splice(idx, 1);
+            else aprobadas.push(m.codigo);
+            localStorage.setItem("aprobadas", JSON.stringify(aprobadas));
+            render();
+          };
+          const tip = document.createElement("div");
+          tip.className = "tooltip";
+          if (m.cursada) tip.innerText += `Cursar si: ${m.cursada.join(", ")}\n`;
+          if (m.rendir) tip.innerText += `Rendir si: ${m.rendir.join(", ")}\n`;
+          div.appendChild(tip);
+          anioEl.appendChild(div);
+        });
+        container.appendChild(anioEl);
+      });
+    }
+
+    render();
+  </script>
 </body>
 </html>
