--- a/index.html
+++ b/index.html
@@ -124,6 +124,164 @@
         ]
       }
     ];
+    {
+        anio: 3,
+        cuatrimestre: 1,
+        nombre: "ANALISIS DE SISTEMAS ADMINISTRATIVOS",
+        codigo: "1558",
+        cursada: ["1711"],
+        rendir: ["1711"]
+      },
+      {
+        anio: 3,
+        cuatrimestre: 1,
+        nombre: "CONTABILIDAD II C",
+        codigo: "1643",
+        cursada: ["1576"],
+        rendir: ["1576", "1613"]
+      },
+      {
+        anio: 3,
+        cuatrimestre: 1,
+        nombre: "CONTABILIDAD SOCIAL Y AMBIENTAL",
+        codigo: "1645",
+        cursada: ["1576"],
+        rendir: ["1576", "1613", "1660"]
+      },
+      {
+        anio: 3,
+        cuatrimestre: 1,
+        nombre: "FUNDAMENTOS DEL DERECHO PUBLICO",
+        codigo: "9073",
+        cursada: ["9065"],
+        rendir: ["9065"]
+      },
+      {
+        anio: 3,
+        cuatrimestre: 2,
+        nombre: "ACTUACION PROFESIONAL, LABORAL y PREVISIONAL",
+        codigo: "1670",
+        cursada: ["9074"],
+        rendir: ["9074"]
+      },
+      {
+        anio: 3,
+        cuatrimestre: 2,
+        nombre: "CONTABILIDAD III C",
+        codigo: "1644",
+        cursada: ["1643"],
+        rendir: ["1643", "1576"]
+      },
+      {
+        anio: 3,
+        cuatrimestre: 2,
+        nombre: "FINANZAS PUBLICAS C.P.",
+        codigo: "2128",
+        cursada: ["2253"],
+        rendir: ["2253"]
+      },
+      {
+        anio: 4,
+        cuatrimestre: 1,
+        nombre: "ACTUACION PROFESIONAL SOCIETARIA",
+        codigo: "1568",
+        cursada: ["9074"],
+        rendir: ["9074"]
+      },
+      {
+        anio: 4,
+        cuatrimestre: 1,
+        nombre: "ADMINISTRACION GENERAL C",
+        codigo: "1657",
+        cursada: ["1558", "1660"],
+        rendir: ["1558", "1660"]
+      },
+      {
+        anio: 4,
+        cuatrimestre: 1,
+        nombre: "CONTABILIDAD DE COSTOS",
+        codigo: "1530",
+        cursada: ["1643", "1673"],
+        rendir: ["1643", "1673", "1660"]
+      },
+      {
+        anio: 4,
+        cuatrimestre: 1,
+        nombre: "COOPERATIVAS, MUTUALES Y OTROS ENTES DE LA ECONOMIA SOCIAL",
+        codigo: "1527",
+        cursada: ["1576", "1643"],
+        rendir: ["1576", "1643", "1645", "9074"]
+      },
+      {
+        anio: 4,
+        cuatrimestre: 2,
+        nombre: "ADMINISTRACION FINANCIERA I",
+        codigo: "1511",
+        cursada: ["1643", "1644", "1673", "2128"],
+        rendir: ["1643", "1644", "1673", "2128", "8105"]
+      },
+      {
+        anio: 4,
+        cuatrimestre: 2,
+        nombre: "CONTABILIDAD PUBLICA",
+        codigo: "1532",
+        cursada: ["1643", "2128"],
+        rendir: ["1643", "2128", "9073"]
+      },
+      {
+        anio: 4,
+        cuatrimestre: 2,
+        nombre: "TEORIA Y TECNICA TRIBUTARIA I",
+        codigo: "1911",
+        cursada: ["1643", "1644"],
+        rendir: ["1643", "1644", "2128", "9073", "9074"]
+      },
+      {
+        anio: 5,
+        cuatrimestre: 0,
+        nombre: "AUDITORIA A",
+        codigo: "1666",
+        cursada: ["1568", "1657", "1911"],
+        rendir: ["1568", "1657", "1911", "1644", "1670"]
+      },
+      {
+        anio: 5,
+        cuatrimestre: 1,
+        nombre: "ACTUACION PROFESIONAL JUDICIAL",
+        codigo: "1502",
+        cursada: ["1568", "1670", "1911"],
+        rendir: ["1568", "1670", "1911"]
+      },
+      {
+        anio: 5,
+        cuatrimestre: 1,
+        nombre: "TEORIA Y TECNICA TRIBUTARIA II",
+        codigo: "1912",
+        cursada: ["1911"],
+        rendir: ["1911"]
+      },
+      {
+        anio: 5,
+        cuatrimestre: 2,
+        nombre: "PRACTICA PROFESIONAL INTEGRADORA",
+        codigo: "1812",
+        cursada: ["1568", "1912"],
+        rendir: ["1568", "1912"]
+      },
+      {
+        anio: 5,
+        cuatrimestre: 2,
+        nombre: "PRACTICA PROFESIONAL SUPERVISADA",
+        codigo: "1813",
+        rendir: ["4928"]
+      },
+      {
+        anio: 5,
+        cuatrimestre: 2,
+        nombre: "PRUEBA DE SUFICIENCIA EN IDIOMA EXTRANJERO: INGLES",
+        codigo: "4928"
+      }
+    ];
 
     const aprobadas = JSON.parse(localStorage.getItem('materias_aprobadas') || '[]');
 
